# ssvm-nodejs-starter

./: Cargo.toml  README.md
node/: app.js  client.js  image.js
public/: show_pic.html
src/: lib.rs
