[package]
name = "ssvm_nodejs_starter"
version = "0.1.0"
authors = ["fcs"]
edition = "2020"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_nodejs_starter_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = { version="=0.2.61", features=["serde-serialize"] }
nodejs-helper = "0.0.3"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "^1.0.51"
image = "0.23.0"
